--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-prose": "^1.0.0-0",
     "react-router-dom": "^7.4.0",
     "react-type-animation": "^3.2.0",
-    "rehype-raw": "^7.0.0"
+    "rehype-raw": "^7.0.0",
+    "throttle": "^1.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
